# GGLEngine

./: .gitignore  CMakeLists.txt  Makefile  README.md  build_debug.bat  game.d  imgui.ini  save.rdc
src/: copPak.gmdl  main.cpp
src/Engine/Assets/: Mesh.cpp  Mesh.h  Vertex.h
src/Engine/Assets/Dependencies/: Mesh.cpp  Mesh.h  Texture.cpp
src/Engine/Assets/Import/: OBJImport.cpp
src/Engine/Core/: AssetImport.cpp  AssetImport.h  Camera.cpp  Camera.h  Window.cpp  Window.h
src/Engine/Core/AssetImporter/: AssetImport.cpp  AssetImport.h  GMDLSerializer.cpp  GMDLSerializer.h  OBJImport.cpp  OBJImport.h
src/Engine/Graphics/: EBO.cpp  EBO.h  Renderer.cpp  Renderer.h  ShaderInstance.cpp  ShaderInstance.h  Texture.h  VAO.cpp  VAO.h  VBO.cpp  VBO.h
src/Engine/Graphics/Lighting/: PointLight.cpp
src/Engine/Graphics/Rendering/: Renderer.cpp  Renderer.h
src/Engine/Maths/: CFrame.cpp  CFrame.h  Vector2.h  Vector3.h
src/Engine/Renderer/: Renderer.cpp  Renderer.h
src/Engine/Renderer/OpenGL/: GLArray.cpp  GLArray.h  GLBuf.cpp  GLBuf.h  ShaderInstance.cpp  ShaderInstance.h  Vertex.h
src/Engine/Scenes/: Scene.h
src/Engine/Scenes/Lighting/: PointLight.cpp  PointLight.h
src/Engine/Util/: Log.cpp  Log.h  StringUtils.cpp  StringUtils.h
src/Models/: copPak.gmdl
src/engine/include/asset/: default_assets.h  material_data.h  mesh_data.h
src/engine/include/core/: camera.h  scene_window.h  window.h
src/engine/include/global/: globals.h
src/engine/include/render/: material.h  mesh.h  renderer.h  scene_renderer.h  texture.h  texture_cache.h  vertex.h
(+56 files in other folders)
